Update home page texts. Some tweak to background on mobile screens.

--- a/app/dev/module/main/main.html
+++ b/app/dev/module/main/main.html
@@ -39,14 +39,15 @@
 
                 <div class="header-content">
                     <div class="intro-text-bg">
-                        <p>Rediscover the Word of God!</p>
+
+                        <h1>Bring The Word to Life.</h1>
+                        <p>Read the bible, find sermons, take notes, interact...</p>
                     </div>
                 </div>
+
             </div>
 
         </div>
-
-    </div>
     </div>
 
     <div class="info">
@@ -56,18 +57,17 @@
 
                 <h3>Discover life transforming sermons.</h3>
                 <p>Do you remember all your pastor’s sermon last month?
-                    How about last year? We didn’t think so.</p>
+                    How about last year? You're not alone.</p>
             </div>
             <div class="col-sm-4 section">
                 <img src="img/note.png" alt="">
                 <h3>Takes notes in a central place.</h3>
-                <p>It's good to take notes. How about keeping them safe, organized and accessible for ever.</p>
+                <p>It's good to take notes. How about keeping them safe, organized and accessible forever.</p>
             </div>
             <div class="col-sm-4 section">
                 <img src="img/social.png" alt="">
                 <h3>Share and gain inspiration.</h3>
-                <p>As iron sharpens iron,
-                    So one person sharpens and influences another through discussion.</p>
+                <p>As iron sharpens iron, so one person sharpens and influences another through discussion.</p>
             </div>
         </div>
 
