Client Add support to auto-detect scripture in text and add-directive that will highlight text and load scripture on select.
Update parseScripture function for smarter detection with shorter code

Server
Added route to save new post and to like/unlike user post.
Made some refactor the model class. Renamed the filter_feed function to process_feed and moved it out

--- a/app/dev/module/read/read.html
+++ b/app/dev/module/read/read.html
@@ -1,7 +1,7 @@
 <section id="main">
     <section id="content">
         <div class="container">
-            <scripture text="readCtrl.scripture"></scripture>
+            <scripture-card text="readCtrl.scripture"></scripture-card>
         </div>
     </section>
 </section>
