Implemented bible lookup. Add view to browse books in the bible, and chapters in book. User can also quickly look up a book from the quick actions.
Added method to find a book in the bible by name

Fixed bug in sermon browse not showing calendar if there is no sermon.

Updated search handler to redirect user to select chapter if valid book name is searched.

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -155,7 +155,8 @@
 <script src="module/component/feed/feed-directive.js"></script>
 <script src="module/component/scripture/scripture-directive.js"></script>
 
-<script src="module/component/bible/bible-data.js"></script>
+<!--<script src="module/component/bible/bible-data.js"></script>-->
+<script src="module/component/bible/books.js"></script>
 <script src="module/component/bible/bible-service.js"></script>
 <script src="module/component/alert/alert-service.js"></script>
 <script src="module/component/util/util.js"></script>
