--- a/app/dev/module/shared/sidebar-left.html
+++ b/app/dev/module/shared/sidebar-left.html
@@ -57,5 +57,11 @@
                     <md-icon md-svg-src="/img/icons/speaker_notes_black.svg"></md-icon>
                 </i> Sermons</a>
         </li>
+         <li data-ui-sref-active="active">
+            <a data-ui-sref="base.bible">
+                <i>
+                    <md-icon md-svg-src="/img/icons/bible.svg"></md-icon>
+                </i> Bible</a>
+        </li>
     </ul>
 </div>
