--- a/app/dev/module/read/read.html
+++ b/app/dev/module/read/read.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <scripture-card text="readCtrl.scripture"></scripture-card>
+    <scripture-card ng-if="readCtrl.scripture" text="readCtrl.scripture"></scripture-card>
 </div>
