Fixed bug with parsing psalms. Fixed bug with login not redirecting to home page.
Style updates to bible views.
Fixed bug with case sensitive filter for books.
Added bible icon to top bar.
Fixed misalign arrow icon on mobile view.

--- a/app/dev/module/read/bible.html
+++ b/app/dev/module/read/bible.html
@@ -1,11 +1,6 @@
 <div class="container">
-
-    <div class="block-header">
-        <!--<h2><strong>BBIBLE</strong></h2>-->
-    </div>
-
     <div class="card p-10">
-        <div class="card-header bible-header">
+        <div class="card-header bible-header p-t-0">
             <h1>Bible</h1>
             <div>
                 <input type="text" class="filter-bible" ng-model="readCtrl.filter" placeholder="filter books">
