Fixed ui layout bugs with wysiwyg text editor. Implemented editing notes.. Added close button to bible modal. Fixed bug in findBook method to match whole words. so john doesn't also match 1 john. Added ignore loading bar to saveNote method. Fixed action menu from blocking ui elements to the right of there page. Updated sermon notes to type_text(), and added exception handling to post_put

--- a/app/dev/module/shared/base.html
+++ b/app/dev/module/shared/base.html
@@ -104,7 +104,7 @@
                 <md-icon md-svg-src="/img/icons/note_add.svg"></md-icon>
             </md-button>
         </md-fab-actions>
-        <div id="bookactions">
+        <div id="bookactions" ng-if="appCtrl.fabMenu.isOpen">
             <md-fab-actions ng-hide="!appCtrl.fabMenu.isOpen" ng-repeat="book in appCtrl.books">
                 <md-button
                         ui-sref="base.bible.book({book: book.abbreviation})"
