fixed some login issues added profile picture upload

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -27,7 +27,7 @@
     <link href="vendors/bower_components/angular-loading-bar/src/loading-bar.css" rel="stylesheet">
     <link href="vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css"
           rel="stylesheet">
-    <link href="vendors/bower_components/ngWYSIWYG/css/editor.css" rel="stylesheet">
+    <link href="vendors/bower_components/ngWYSIWYG/dist/editor.min.css" rel="stylesheet">
     <link href="vendors/bower_components/sweetalert/dist/sweetalert.css" rel="stylesheet">
 
     <!-- CSS -->
@@ -126,7 +126,7 @@
 <script src="vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="vendors/bower_components/Waves/dist/waves.min.js"></script>
 <script src="vendors/bower_components/lodash/lodash.min.js"></script>
-<script src="vendors/bower_components/ngWYSIWYG/js/wysiwyg.js"></script>
+<script src="vendors/bower_components/ngWYSIWYG/dist/wysiwyg.min.js"></script>
 <script src="vendors/bower_components/moment/min/moment.min.js"></script>
 <script src="vendors/bower_components/autosize/dist/autosize.min.js"></script>
 
