--- a/app/dev/module/main/settings.html
+++ b/app/dev/module/main/settings.html
@@ -9,9 +9,9 @@
                     </a>
 
 
-                    <!--<a href="" class="pmop-edit">-->
-                    <!--<i class="zmdi zmdi-camera"></i> <span class="hidden-xs">Update Profile Picture</span>-->
-                    <!--</a>-->
+                    <a href="" class="pmop-edit" ngf-select="mainCtrl.upload($file)">
+                    <i class="zmdi zmdi-camera"></i> <span class="hidden-xs">Update Profile Picture</span>
+                    </a>
                 </div>
 
 
