Fixed bug with Facebook login, and bug with study ui.

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -43,60 +43,20 @@
                 'gray-body': $state.current.name.indexOf('base') >= 0
                 }">
 
+<!-- Start of Survicate (www.survicate.com) code -->
+<script type="text/javascript">
+ (function(w) {
+   w['_sv'] = {trackingCode: 'SissrYOGImXorgPbLaIocLmYWGOqczmw'};
+   var s = document.createElement('script');
+   s.src = '//api.survicate.com/assets/survicate.js';
+   s.async = true;
+   var e = document.getElementsByTagName('script')[0];
+   e.parentNode.insertBefore(s, e);
+ })(window);
+</script>
+<!-- End of Survicate code -->
+
 <div ui-view autoscroll='true'></div>
-
-
-<!-- Older IE warning message -->
-<!--[if lt IE 9]>
-<div class="ie-warning">
-    <h1 class="c-white">Warning!!</h1>
-
-    <p>You are using an outdated version of Internet Explorer, please upgrade <br/>to any of the following web browsers
-        to access this website.</p>
-
-    <div class="iew-container">
-        <ul class="iew-download">
-            <li>
-                <a href="http://www.google.com/chrome/">
-                    <img src="img/browsers/chrome.png" alt="">
-
-                    <div>Chrome</div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.mozilla.org/en-US/firefox/new/">
-                    <img src="img/browsers/firefox.png" alt="">
-
-                    <div>Firefox</div>
-                </a>
-            </li>
-            <li>
-                <a href="http://www.opera.com">
-                    <img src="img/browsers/opera.png" alt="">
-
-                    <div>Opera</div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.apple.com/safari/">
-                    <img src="img/browsers/safari.png" alt="">
-
-                    <div>Safari</div>
-                </a>
-            </li>
-            <li>
-                <a href="http://windows.microsoft.com/en-us/internet-explorer/download-ie">
-                    <img src="img/browsers/ie.png" alt="">
-
-                    <div>IE (New)</div>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <p>Sorry for the inconvenience!</p>
-</div>
-<![endif]-->
-
 
 <!-- Core -->
 <script src="vendors/bower_components/jquery/dist/jquery.min.js"></script>
