Work in Progress

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -159,6 +159,7 @@
 <script src="module/component/bible/books.js"></script>
 <script src="module/component/bible/bible-service.js"></script>
 <script src="module/component/alert/alert-service.js"></script>
+<script src="module/component/notification/notification-service.js"></script>
 <script src="module/component/util/util.js"></script>
 </body>
 </html>
