--- a/app/dev/module/main/login-modal.html
+++ b/app/dev/module/main/login-modal.html
@@ -83,7 +83,8 @@
     <hr class="m-t-5 m-b-5">
 </div>
 <div class="modal-footer" style="text-align: center">
-    Don't have an account? <a href ng-click="modalCtrl.showSignupModal()">Sign up</a>
+   Don't have an account? <a href ng-click="modalCtrl.showSignupModal()">Sign up</a> <br>
+  Forgot your password? <a href ng-click="modalCtrl.showPasswordResetModal()">Reset Password</a> 
 </div>
 <!--<div class="outer">-->
 <!--<div class="middle">-->
