--- a/app/dev/module/main/settings.html
+++ b/app/dev/module/main/settings.html
@@ -25,8 +25,12 @@
 
         <div class="pm-body clearfix">
             <ul class="tab-nav tn-justified">
-                <li class="btn-wave active">
-                    <a href="">Profile</a>
+                <li class="btn-wave" data-ui-sref-active="active">
+                    <a data-ui-sref="base.settings.profile">Profile</a>
+                </li>
+
+                <li class="btn-wave" data-ui-sref-active="active">
+                    <a data-ui-sref="base.notifications.notifiction">Notification</a>
                 </li>
             </ul>
 
@@ -35,7 +39,13 @@
                     <div class="pmbb-body p-l-30" data-ng-include="'module/main/user-profile-settings.html'">
                     </div>
                 </div>
+
+                 <div class="pmb-block">
+                    <div class="pmbb-body p-l-30" data-ng-include="'module/main/user-notification-settings.html'">
+                    </div>
+                </div>
             </data>
+
         </div>
     </div>
 </div>
