--- a/app/dev/module/shared/base.html
+++ b/app/dev/module/shared/base.html
@@ -83,7 +83,7 @@
 
 
 <div class="fab-menu">
-    <md-fab-speed-dial md-open="appCtrl.fabMenu.isOpen" md-direction="up" class="md-fling">
+    <md-fab-speed-dial md-direction="up" class="md-fling">
         <md-fab-trigger>
             <md-button class="md-fab md-warn md-button md-ink-ripple" type="button" aria-label="Add...">
                 <md-icon md-svg-src="/img/icons/add.svg"></md-icon>
