Implemented client side password reset

--- a/app/dev/module/main/password-change-modal.html
+++ b/app/dev/module/main/password-change-modal.html
@@ -6,7 +6,7 @@
     <div>
        
         <div class="signup-or-separator m-b-20">
-            <span class="h6 signup-or-separator--text">Enter your email address</span>
+            <span class="h6 signup-or-separator--text">Enter your email address and new password</span>
             <hr>
         </div>
         <div class="m-t-10 alert alert-danger" ng-if="modalCtrl.error">
@@ -16,7 +16,7 @@
         <div class="m-t-10 alert alert-success" ng-if="modalCtrl.success">
             <p ng-bind-html="modalCtrl.success"></p>
         </div>
-        <form name="passwordResetForm" ng-submit="modalCtrl.sendPasswordResetEmail(passwordResetForm)"
+        <form name="passwordResetForm" ng-submit="modalCtrl.changePassword(passwordResetForm)"
               novalidate
               style="padding: 15px">
             <div class="input-group m-b-20"
@@ -33,6 +33,25 @@
                            class="form-control">
                     <small ng-if="passwordResetForm.$submitted && passwordResetForm.email.$invalid"
                            class="help-block">Email is required
+                    </small>
+
+                </div>
+            </div>
+
+            <div class="input-group m-b-20"
+                 ng-class="{'has-error':passwordResetForm.$submitted && passwordResetForm.password.$invalid}">
+                <!--<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>-->
+
+                <div class="fg-line">
+                    <input type="password"
+                           name="password"
+                           placeholder="Password"
+                           ng-model="modalCtrl.password"
+                           required
+                           class="form-control"
+                           id="password">
+                    <small ng-if="passwordResetForm.$submitted && passwordResetForm.password.$invalid"
+                           class="help-block">Password is required
                     </small>
                 </div>
             </div>
