--- a/server/emails/password_reset_success.html
+++ b/server/emails/password_reset_success.html
@@ -3,5 +3,5 @@ You've successfully updated your password! If you did not make this change, cont
 
 <p>
 Regards, </br>
-YourGreenBook
+ScripturedIn
 </p>
