--- a/server/emails/password_reminder.html
+++ b/server/emails/password_reminder.html
@@ -4,5 +4,5 @@ If you did not request a password reset, no further action is required. </br>
 
 <p>
 Regards, </br>
-YourGreenBook
+ScripturedIn
 </p>
