--- a/app/dev/module/main/user-notification-settings.html
+++ b/app/dev/module/main/user-notification-settings.html
@@ -1,23 +1,23 @@
 <div class="row">
     <div class="col-sm-12">
-    <md-switch ng-model="mainCtrl.emailNotification.post_reply"  class="md-primary md-block">
+    <md-switch ng-model="mainCtrl.emailNotification.post_reply" ng-change="mainCtrl.updateNotificationSetting('POST_REPLY', mainCtrl.emailNotification.post_reply)"  class="md-primary md-block">
     Send me an email when someone replies to my post
   </md-switch>
 
-  <md-switch ng-model="mainCtrl.emailNotification.new_post" class="md-primary  md-block">
+  <md-switch ng-model="mainCtrl.emailNotification.new_post" ng-change="mainCtrl.updateNotificationSetting('NEW_POST', mainCtrl.emailNotification.new_post)" class="md-primary  md-block">
     Send me an email when someone in my church creates a new post
   </md-switch>
 
-  <md-switch  ng-model="mainCtrl.emailNotification.post_like" class="md-primary md-block">
+  <md-switch  ng-model="mainCtrl.emailNotification.post_like" ng-change="mainCtrl.updateNotificationSetting('POST_LIKE', mainCtrl.emailNotification.post_like)" class="md-primary md-block">
     Send me an email when someone likes my post 
   </md-switch>
 
 
-  <md-switch class="md-primary md-block"  ng-model="mainCtrl.emailNotification.mention">
+  <md-switch class="md-primary md-block"  ng-model="mainCtrl.emailNotification.mention" ng-change="mainCtrl.updateNotificationSetting('MENTION', mainCtrl.emailNotification.mention)">
     Send me an email when I am mentioned
   </md-switch>
 
-  <md-switch ng-model="mainCtrl.emailNotification.newSermon"  class="md-primary md-block">
+  <md-switch ng-model="mainCtrl.emailNotification.new_sermon" ng-change="mainCtrl.updateNotificationSetting('NEW_SERMON', mainCtrl.emailNotification.new_sermon)"  class="md-primary md-block">
     Send me an email when my pastor posts a new sermon
   </md-switch>
       
