Added user client side notification

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -143,6 +143,7 @@
 <script src="module/app-controller.js"></script>
 <script src="module/main/main-controller.js"></script>
 <script src="module/home/home-controller.js"></script>
+<script src="module/notification/notification-controller.js"></script>
 <script src="module/read/read-controller.js"></script>
 <script src="module/notes/notes-controller.js"></script>
 <script src="module/notes/note-service.js"></script>
